--- a/Foto_Laurea_def-main/public/index.html
+++ b/Foto_Laurea_def-main/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Mia Laurea - Galleria Foto</title>
-    <link rel="stylesheet" href="/public/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container">
@@ -25,6 +25,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
