--- a/Foto_Laurea_def-main/public/scaduto.html
+++ b/Foto_Laurea_def-main/public/scaduto.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Link scaduto</title>
-  <link rel="stylesheet" href="/public/style.css">
+  <link rel="stylesheet" href="./style.css">
+<script src="./script.js"></script>
 </head>
 <body class="expired-page">
   <div class="expired-box">
