--- a/Foto_Laurea_def-main/public/index.html
+++ b/Foto_Laurea_def-main/public/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <!-- PULSANTE ADMIN IN ALTO A SINISTRA -->
+    <a href="./admin.html" class="admin-button">Admin</a>
+
     <div class="container">
         <header>
             <h1>🎓 La Mia Laurea</h1>
@@ -25,6 +28,5 @@
         </div>
     </div>
 
-  <script src="./script.js"></script>
+    <script src="./script.js"></script>
 </body>
-</html>
